# chan

./: .design.md.swp  .gitignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  abs-path-plan.md  candle-plan.md  contacts-plan.md  design.md  release-review.md
crates/chan/: Cargo.toml  design.md
crates/chan-core/: Cargo.toml
crates/chan-core/src/: trash.rs  watch.rs
crates/chan-drive/: Cargo.toml  README.md  design.md
crates/chan-drive/src/: blob.rs  bootstrap.rs  drafts.rs  drive.rs  error.rs  fd_budget.rs  fs_ops.rs  graph.rs  indexer.rs  lib.rs  library.rs  lock.rs  metadata_archive.rs  paths.rs  progress.rs  registry.rs  report.rs  rich_prompts.rs  teams.rs  test_gate.rs  trash.rs  vcs.rs  watch.rs
crates/chan-drive/tests/: contacts_import.rs  file_types.rs  ignore_consistency.rs  index_bench.rs  links_normalized.rs  progress_events.rs  remove_cleanup.rs  report.rs  smoke.rs
crates/chan-library/: Cargo.toml  design.md
crates/chan-library/src/: config.rs  desktop_window_ops.rs  devserver_registry.rs  error.rs  gateway_registry.rs  host.rs  lib.rs  participant_names.rs  prefix.rs  serve_config.rs  session_presence.rs  tenant.rs  terminal_sessions.rs  time.rs  window_presence.rs  window_titles.rs  window_transfers.rs  windows.rs  workspace_persist.rs
crates/chan-llm/: CLAUDE.md  Cargo.toml  README.md  design.md  rust-toolchain.toml
crates/chan-llm/benches/: end_to_end.rs
crates/chan-llm/scripts/: pre-push
crates/chan-llm/src/: cli.rs  config.rs  error.rs  keys.rs  lib.rs  mcp.rs  prompts.rs  session.rs  tools.rs
crates/chan-report/: Cargo.toml  README.md  design.md
crates/chan-report/src/: cocomo.rs  complexity.rs  count.rs  error.rs  jsonl.rs  lib.rs  summary.rs  walk.rs
crates/chan-report/tests/: integration.rs
crates/chan-server/: Cargo.toml  build.rs  design.md
crates/chan-server/src/: auth.rs  bus.rs  cli_resolve.rs  config.rs  config_watch.rs  control_socket.rs  desktop_window_ops.rs  devserver.rs  devserver_api.rs  devserver_handoff.rs  disk_echo.rs  embed_seed.rs  error.rs  event_watcher.rs  handoff.rs  handover_bus.rs  host.rs  indexer.rs  lib.rs  mcp_bridge.rs  mcp_discovery.rs  preferences.rs  qr.rs  self_writes.rs  session_roster.rs  signal.rs  state.rs  static_assets.rs  store.rs  submit_config.rs  survey.rs  terminal_blob.rs  terminal_sessions.rs  tunnel_guard.rs  util.rs  window_bus.rs  window_presence.rs  window_titles.rs
crates/chan-shell/: Cargo.toml  design.md
crates/chan-shell/src/: cli.rs  control.rs  exit_code.rs  help.rs  lib.rs  submit.rs  wire.rs
crates/chan-systemd/: Cargo.toml
crates/chan-systemd/src/: lib.rs  linux.rs  unsupported.rs
crates/chan-tunnel-client/: Cargo.toml  README.md  design.md
crates/chan-tunnel-client/src/: dial.rs  lib.rs
crates/chan-tunnel-proto/: Cargo.toml  README.md  design.md
crates/chan-tunnel-proto/src/: control.rs  drive_name.rs  frame.rs  gateway_assertion.rs  h2_duplex.rs  io.rs  lease_refresh.rs  lib.rs  workspace_name.rs
crates/chan-tunnel-server/: Cargo.toml  README.md  design.md
crates/chan-tunnel-server/src/: driver.rs  lib.rs  public.rs  registry.rs  tunnel.rs
crates/chan-tunnel-server/tests/: listener_e2e.rs  public_e2e.rs
crates/chan-workspace/: Cargo.toml  README.md  design.md
crates/chan-workspace/src/: blob.rs  bootstrap.rs  daemon_lock.rs  dashboard.rs  drafts.rs  drive.rs  error.rs  fd_budget.rs  fs_ops.rs  graph.rs  graph_normalize.rs  indexer.rs  lib.rs  library.rs  lock.rs  metadata_archive.rs  paths.rs  progress.rs  registry.rs  report.rs  rich_prompts.rs  teams.rs  test_gate.rs  trash.rs  vcs.rs  watch.rs  workspace.rs  workspace_search.rs
crates/chan-workspace/tests/: contacts_import.rs  file_types.rs  ignore_consistency.rs  index_bench.rs  links_normalized.rs  progress_events.rs  remove_cleanup.rs  report.rs  smoke.rs  workspace_search_golden.rs
crates/chan/src/: devserver_daemon.rs  devserver_windows.rs  help.rs  lib.rs  main.rs  skill.rs  update.rs
crates/chan/tests/: cs_alias.rs  devserver_resilience.rs  open_close.rs  serve_unserve.rs
crates/fetch-models/: Cargo.toml  design.md
crates/fetch-models/src/: main.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: about.json  default.json  devserver-abandon.json  devserver-window.json  drive.json  launcher-events.json  launcher-update.json  local-drop.json  local-upload.json  window-hidden.json  workspace.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: app.toml
desktop/src-tauri/src/: auth.rs  config.rs  cs_install.rs  default_drive.rs  default_workspace.rs  devserver.rs  download.rs  drag_out.rs  dropped_paths.rs  embedded.rs  gateway.rs  linux_gui_stack.rs  main.rs  native_dialog.rs  pdf.rs  registry.rs  runtime_capability.rs  serve.rs  upload.rs  watcher.rs  (+3 more)
gateway/: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
gateway/docs/: cutover-runbook.md  dev-setup.md  prod-cutover-devserver-proxy.md  prod-rollout-handoff.md  testing-on-linux-and-macos.md
gateway/migrations/: 0001_init.sql  0002_refresh_tokens.sql  0003_usernames_and_api_tokens.sql  0004_drop_refresh_tokens.sql  0005_drop_drives.sql  0005_drop_workspaces.sql  0006_block_and_auth_audit.sql  0007_users_avatar.sql  0008_api_token_scopes.sql  0009_drive_grants.sql  0009_workspace_grants.sql  0010_drives.sql  0010_workspaces.sql  0011_feature_flags.sql  0012_devservers.sql  0013_devservers_last_seen.sql  0014_drop_devserver_grant_roles.sql  0015_control_revocation_outbox.sql
gateway/packaging/: domain.env
gateway/scripts/: build-debs.sh  configure.sh  migrations-resync.sh  release.sh
gateway/tests-shared/: pg_reaper.rs
gateway/web-common/: package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json  drive.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  main.rs  serve.rs  watcher.rs
(+2858 files in other folders)
