# Workspace manifest for chan: notes app with embedded web editor.
#
# Three crates:
#
#   - chan          the binary. Parses CLI args; dispatches subcommands
#                   (add, list, remove, rename, serve, index, search,
#                   upgrade). Embeds the web frontend at build time
#                   via chan-server's rust-embed.
#
#   - chan-server   HTTP + WebSocket surface. Wraps chan-drive's
#                   Library / Drive handles in axum routes and serves
#                   the embedded frontend.
#
#   - fetch-models  build-only helper. Pre-fetches the default
#                   embedding model into chan-server/resources/ so
#                   release builds can bundle it via include_bytes!.
#                   Run via `make models`; not invoked by `cargo
#                   build` directly.
#
# chan-drive (filesystem, search, graph), chan-llm (LLM backends,
# prompts, tool sandbox, key resolution), and chan-tunnel-client
# all live as workspace member crates inside the chan-core repo.
# They are pulled in as path deps that assume a sibling-checkout
# layout (`~/dev/github.com/chan-writer/{chan,chan-core}`). Switch
# to git or crates.io deps when the repos go public.

[workspace]
resolver = "2"
members = [
    "crates/chan",
    "crates/chan-server",
    "crates/fetch-models",
]

[workspace.package]
version = "0.6.16"
edition = "2021"
# Mirrors `rust-toolchain.toml`; pre-push and CI compile under the
# same compiler. Bumping requires updating both files in the same
# commit.
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/chan-writer/chan"

[workspace.dependencies]
# default-features off so each consumer crate can forward chan-drive's
# `embeddings` feature through its own gate (chan-server / chan
# declare their own `embeddings` feature that enables this one).
# Without `default-features = false` here, per-crate overrides are
# silently ignored by Cargo.
chan-drive = { path = "../chan-core/crates/chan-drive", version = "0.8.0", default-features = false }
chan-llm = { path = "../chan-core/crates/chan-llm", version = "0.8.0" }
chan-tunnel-client = { path = "../chan-core/crates/chan-tunnel-client", version = "0.8.0" }
chan-tunnel-proto = { path = "../chan-core/crates/chan-tunnel-proto", version = "0.8.0" }

anyhow = "1"
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Defaults pull `zstdmt` for parallel encode, fine on the build
# host (fetch-models). The runtime decode path in chan-server
# only needs single-threaded decode, but pulling the same crate
# avoids two separate native libraries.
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
