# Workspace manifest for chan: CLI, server, core libraries, and
# the Tauri desktop shell.

[workspace]
resolver = "2"
members = [
    "crates/chan",
    "crates/chan-drive",
    "crates/chan-llm",
    "crates/chan-report",
    "crates/chan-server",
    "crates/chan-tunnel-client",
    "crates/chan-tunnel-proto",
    "crates/chan-tunnel-server",
    "crates/fetch-models",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.15.3"
edition = "2021"
# Mirrors `rust-toolchain.toml`; pre-push and CI compile under the
# same compiler. Bumping requires updating both files in the same
# commit.
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/fiorix/chan"

[workspace.dependencies]
# default-features off so each consumer crate can forward chan-drive's
# `embeddings` feature through its own gate (chan-server / chan
# declare their own `embeddings` feature that enables this one).
# Without `default-features = false` here, per-crate overrides are
# silently ignored by Cargo.
chan-drive = { version = "0.15.3", path = "crates/chan-drive", default-features = false }
chan-llm = { version = "0.15.3", path = "crates/chan-llm" }
chan-report = { version = "0.15.3", path = "crates/chan-report" }
chan-server = { version = "0.15.3", path = "crates/chan-server", default-features = false }
chan-tunnel-client = { version = "0.15.3", path = "crates/chan-tunnel-client" }
chan-tunnel-proto = { version = "0.15.3", path = "crates/chan-tunnel-proto" }
chan-tunnel-server = { version = "0.15.3", path = "crates/chan-tunnel-server" }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
futures = "0.3"
gethostname = "1"
getrandom = "0.2"
h2 = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.6", features = ["transport-io"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
schemars = "1.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "limit", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
yamux = "0.13"
# Defaults pull `zstdmt` for parallel encode, fine on the build
# host (fetch-models). The runtime decode path in chan-server
# only needs single-threaded decode, but pulling the same crate
# avoids two separate native libraries.
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package.chan-desktop]
opt-level = "s"
strip = true
