# Workspace manifest for chan: CLI, server, core libraries, and
# the Tauri desktop shell.

[workspace]
resolver = "2"
members = [
    "crates/chan",
    "crates/chan-workspace",
    "crates/chan-llm",
    "crates/chan-report",
    "crates/chan-library",
    "crates/chan-systemd",
    "crates/chan-server",
    "crates/chan-shell",
    "crates/chan-tunnel-client",
    "crates/chan-tunnel-proto",
    "crates/chan-tunnel-server",
    "crates/fetch-models",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.71.0"
edition = "2021"
# Mirrors `rust-toolchain.toml`; pre-push and CI compile under the
# same compiler. Bumping requires updating both files in the same
# commit.
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/fiorix/chan"

[workspace.dependencies]
# default-features off so each consumer crate can forward chan-workspace's
# `embeddings` feature through its own gate (chan-server / chan
# declare their own `embeddings` feature that enables this one).
# Without `default-features = false` here, per-crate overrides are
# silently ignored by Cargo.
# The `chan` CLI as a library, so chan-desktop can dispatch `chan`
# in-process (`chan::run(.., Personality::Desktop)`) when invoked through a
# `~/.local/bin/chan` shim. Default features (incl. `embeddings`) on; the
# crate's own macOS target deps add candle's metal backend.
chan = { version = "0.71.0", path = "crates/chan" }
chan-workspace = { version = "0.71.0", path = "crates/chan-workspace", default-features = false }
chan-llm = { version = "0.71.0", path = "crates/chan-llm" }
chan-report = { version = "0.71.0", path = "crates/chan-report" }
chan-library = { version = "0.71.0", path = "crates/chan-library" }
chan-systemd = { version = "0.71.0", path = "crates/chan-systemd" }
chan-server = { version = "0.71.0", path = "crates/chan-server", default-features = false }
# default-features off so chan-server can pull just the wire types
# (`ControlRequest` / `ControlResponse`) without the clap-backed `cs`
# client; the binaries (chan / chan-desktop) re-enable the `client`
# feature for the full surface.
chan-shell = { version = "0.71.0", path = "crates/chan-shell", default-features = false }
chan-tunnel-client = { version = "0.71.0", path = "crates/chan-tunnel-client" }
chan-tunnel-proto = { version = "0.71.0", path = "crates/chan-tunnel-proto" }
chan-tunnel-server = { version = "0.71.0", path = "crates/chan-tunnel-server" }

anyhow = "1"
# Native OS clipboard for chan-desktop: the terminal "Paste" menu and the
# `cs copy` / `cs paste` bridge, bypassing WKWebView's programmatic-paste
# "Paste" button. Desktop-only (gnu); never pulled into the static-musl
# standalone `chan` binary. default-features off keeps the base dep text-only;
# the desktop member opts into `image-data` for the image clipboard.
arboard = { version = "3", default-features = false }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
futures = "0.3"
gethostname = "1"
getrandom = "0.2"
h2 = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
filedescriptor = "0.8"
hyper = { version = "1", features = ["http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
# PNG <-> RGBA for chan-desktop's `cs copy` / `cs paste` image clipboard: the
# terminal deals in PNG, arboard's ImageData is raw RGBA. Desktop-only; the
# member enables the `png` codec. default-features off keeps it lean (no other
# codecs) and out of the standalone `chan` binary.
image = { version = "0.25", default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
portable-pty = "0.8"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.6", features = ["transport-io"] }
rustix = { version = "1.1", features = ["fs", "net", "process", "termios"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
schemars = "1.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = "2"
tauri-build = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# WS client for the devserver window feed (`/api/library/windows/watch`). rustls
# + webpki roots ONLY -- keep the tree openssl-free (the static-musl CLI relies on
# it) and the xwin/gateway cross-compile clean. Pairs with tokio-rustls 0.26.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
yamux = "0.13"
# Defaults pull `zstdmt` for parallel encode, fine on the build
# host (fetch-models). The runtime decode path in chan-server
# only needs single-threaded decode, but pulling the same crate
# avoids two separate native libraries.
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package.chan-desktop]
opt-level = "s"
strip = true
