# Workspace manifest for chan-gateway: identity + profile services
# behind id.chan.app and workspace.chan.app.
#
# Crates (more land in follow-up issues):
#
#   - profile      internal HTTP API in front of Postgres. CRUD for
#                  users, linked OAuth identities, and per-user workspace
#                  URLs. Called only by other gateway services; not
#                  exposed publicly.
#
#   - identity     public-facing service at id.chan.app. Runs OAuth2
#                  sign-in (GitHub for v0), holds the session, serves
#                  a small Svelte SPA where users manage workspace URLs.
#                  Owns no domain data; calls profile-service over
#                  HTTP.
#
#   - workspace-proxy  public-facing service at workspace.chan.app. Lists
#                  the signed-in user's workspaces with online/offline
#                  status. v0 opens workspaces in a new tab; the actual
#                  reverse-proxy ships once chan-server's frontend
#                  is path-prefix friendly (or we go subdomain-per-
#                  workspace with a wildcard cert).
#
# See README.md for the project narrative and pointers to the
# upstream issue tracker.

[workspace]
resolver = "2"
members = [
    "crates/admin",
    "crates/workspace-proxy",
    "crates/gateway-common",
    "crates/identity",
    "crates/profile",
]

[workspace.package]
# Versioned in lockstep with the monorepo root Cargo.toml: the gateway
# ships on chan's `vX.Y.Z` release line, and the release CI refuses to
# build if the tag doesn't equal this value. Whatever bumps the root
# version must bump this in the same commit.
version = "0.27.0"
edition = "2021"
# Mirrors the repo-root rust-toolchain.toml (1.95.0); the gateway has
# no toolchain file of its own and inherits the monorepo pin.
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/fiorix/chan"

[workspace.dependencies]
# In-repo tunnel crates (monorepo). Path-only: this is a nested
# workspace under the same repo as crates/chan-tunnel-*, so no
# version pin / cross-repo checkout is needed.
chan-tunnel-client = { path = "../crates/chan-tunnel-client" }
chan-tunnel-proto = { path = "../crates/chan-tunnel-proto" }
chan-tunnel-server = { path = "../crates/chan-tunnel-server" }
gateway-common = { path = "crates/gateway-common" }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "ws"] }
# yamux Streams from chan-tunnel-server expose futures-io traits;
# workspace-proxy needs the Compat shim and TokioAsyncReadCompatExt to
# bridge them onto tokio io.
tokio-util = { version = "0.7", features = ["compat"] }
# Workspace-proxy runs hyper's h1 client over yamux substreams to reach
# `chan serve`; reqwest is no longer the upstream transport.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
h2 = "0.4"
bytes = "1"
base64 = "0.22"
# HS256 mint + verify for the workspace-gate handoff. identity-service
# mints; workspace-proxy verifies and mints its own session cookies.
# Shared secret (WORKSPACE_GATE_SECRET) via env.
jsonwebtoken = { version = "9", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
# Constant-time byte comparisons for bearer tokens and OAuth state.
# Avoids leaking secret length / prefix via timing differences.
subtle = { version = "2", default-features = false }
thiserror = "1"
# tokio: explicit feature subset rather than `full`. Covers the
# patterns actually used across the workspace (rt-multi-thread for
# `#[tokio::main]`, current_thread for the admin CLI, macros for
# select!/main, net for TcpListener, time for intervals/timeouts,
# sync + io-util for the proxy bridge, signal for graceful shutdown
# hooks). Drops unused fs/process/test-util to shrink each binary.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
# Plaintext WebSocket client used to bridge browser WS frames to
# `chan serve`. workspace-proxy runs the WS client handshake (`client_async`)
# directly on a yamux substream, so the `connect` feature isn't needed.
tokio-tungstenite = { version = "0.24", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
