# Workspace manifest for chan-gateway: the services behind
# id.chan.app and devserver.chan.app.
#
# Crates:
#
#   - profile      internal HTTP API in front of Postgres. Users,
#                  linked OAuth identities, workspaces + sharing
#                  grants, feature flags, auth audit. Called only by
#                  identity-service and the operator CLI; not exposed
#                  publicly.
#
#   - identity     public-facing service at id.chan.app. OAuth2
#                  sign-in (GitHub / Google / GitLab) with PKCE,
#                  Postgres-backed sessions, personal access tokens,
#                  the embedded Svelte dashboard SPA, and the
#                  devserver-gate entry-token mint. Owns no domain
#                  data; calls profile-service over HTTP.
#
#   - devserver-proxy  public-facing service at devserver.chan.app
#                  (apex: tunnel + admin) and *.devserver.chan.app
#                  (wildcard: tenant content). Terminates `chan devserver`
#                  tunnel registrations over h2c and reverse-proxies
#                  HTTP + WebSocket traffic into them, gated by the
#                  devserver-gate JWT handoff.
#
#   - admin        operator CLI against profile's and devserver-proxy's
#                  admin trees (users, tokens, tunnels, flags, audit).
#
#   - gateway-common  shared library: domain derivation, HTTP clients,
#                  devserver-gate JWT, token bucket, validators.
#
# See README.md for the project narrative.

[workspace]
resolver = "2"
members = [
    "crates/admin",
    "crates/devserver-proxy",
    "crates/gateway-common",
    "crates/identity",
    "crates/profile",
]

[workspace.package]
# Versioned in lockstep with the monorepo root Cargo.toml: the gateway
# ships on chan's `vX.Y.Z` release line, and the release CI refuses to
# build if the tag doesn't equal this value. Whatever bumps the root
# version must bump this in the same commit.
version = "0.66.1-rc1"
edition = "2021"
# Mirrors the repo-root rust-toolchain.toml (1.95.0); the gateway has
# no toolchain file of its own and inherits the monorepo pin.
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/fiorix/chan"

[workspace.dependencies]
# In-repo tunnel crates (monorepo). Path-only: this is a nested
# workspace under the same repo as crates/chan-tunnel-*, so no
# version pin / cross-repo checkout is needed.
chan-tunnel-client = { path = "../crates/chan-tunnel-client" }
chan-tunnel-proto = { path = "../crates/chan-tunnel-proto" }
chan-tunnel-server = { path = "../crates/chan-tunnel-server" }
gateway-common = { path = "crates/gateway-common" }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
# yamux Streams from chan-tunnel-server expose futures-io traits;
# devserver-proxy needs the Compat shim and TokioAsyncReadCompatExt to
# bridge them onto tokio io.
tokio-util = { version = "0.7", features = ["compat"] }
# Workspace-proxy runs hyper's h1 client over yamux substreams to
# reach `chan devserver` (reqwest can't drive a caller-supplied stream).
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
h2 = "0.4"
bytes = "1"
base64 = "0.22"
# HS256 mint + verify for the devserver-gate handoff. identity-service
# mints; devserver-proxy verifies and mints its own session cookies.
# Shared secret (DEVSERVER_GATE_SECRET) via env.
jsonwebtoken = { version = "9", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
# Constant-time byte comparisons for bearer tokens and OAuth state.
# Avoids leaking secret length / prefix via timing differences.
subtle = { version = "2", default-features = false }
thiserror = "1"
# tokio: explicit feature subset rather than `full`. Covers the
# patterns actually used across the workspace (rt-multi-thread for
# `#[tokio::main]`, current_thread for the admin CLI, macros for
# select!/main, net for TcpListener, time for intervals/timeouts,
# sync + io-util for the proxy bridge, signal for graceful shutdown
# hooks). Drops unused fs/process/test-util to shrink each binary.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
# Plaintext WebSocket client used to bridge browser WS frames to
# `chan devserver`. Pinned to the same minor as axum's `ws` feature so
# this direct dep unifies with axum's internal tungstenite instead of
# adding another copy. Features are explicit because default-features
# is off and compilation must not lean on axum's dep edge: `handshake`
# for the `client_async` handshake devserver-proxy runs directly on a
# yamux substream, `connect` for the test-side `connect_async` client.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-sessions = "0.14"
# The newest store release pairs with tower-sessions 0.14 (it requires
# tower-sessions-core ^0.14); both pins must resolve to one
# tower-sessions-core or PostgresStore stops satisfying SessionStore.
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
