[package]
name = "chan-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Desktop edition of the chan markdown editor."
license = "Apache-2.0"
repository = "https://github.com/chan-writer/chan-desktop"
homepage = "https://chan.app"
readme = "../README.md"
keywords = ["markdown", "editor", "tauri", "notes", "chan"]
categories = ["text-editors", "gui"]
publish = false

[[bin]]
name = "chan-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
