[package]
name = "chan-drive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem, search, and graph primitives for chan-writer drives"

[dependencies]
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
# fastembed bundles tokenizers + ONNX runtime via `ort`. Default
# features pull in a prebuilt onnxruntime that's downloaded at build
# time and statically linked on supported platforms (macos arm/x64,
# linux x64, win x64). Optional + gated by the `embeddings` feature
# so iOS / minimal builds can opt out via `--no-default-features`.
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries", "hf-hub"], optional = true }
fs4 = { version = "0.9", features = ["sync"] }
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.24"
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
walkdir = "2"

# GPU / accelerator execution providers for the ONNX runtime fastembed
# already bundles. Lets bge-small run off-CPU; on a typical drive the
# difference is tens of minutes vs minutes. Pinned to the exact ort
# version fastembed resolves to so we don't pull a second copy.
#
# macOS: WebGPU EP. ort-sys's pyke prebuilt for aarch64-apple-darwin
# does not ship CoreML symbols (only `none` and `+wgpu` variants
# exist); the `+wgpu` build is Dawn with the Metal backend, which is
# the only off-CPU path available without building onnxruntime from
# source. Always pulled on macOS so embeddings work as the sane
# default; `CHAN_DISABLE_GPU=1` falls back to CPU at runtime.
#
# Linux: CUDA is opt-in via `--features cuda` because the EP needs
# libcudart + libcublas + the CUDA EP shared lib on the host at
# runtime; default Linux builds stay hermetic.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["webgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["cuda"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["embeddings"]
# Hybrid search (BM25 + dense). Pulls fastembed + a prebuilt
# onnxruntime. Opt out (`--no-default-features`) on platforms
# without a prebuilt onnxruntime binary (currently iOS); the
# resulting binary still has BM25-only search via tantivy.
embeddings = ["dep:fastembed"]
# Linux-only: build with `--features cuda` to wire the CUDA EP for
# embeddings. Set `CHAN_DISABLE_CUDA=1` at runtime to fall back to CPU
# without rebuilding. Enabling this on macOS errors at resolve time
# (ort isn't optional there because CoreML always works); macOS users
# get GPU acceleration automatically.
cuda = ["dep:ort"]

[lib]
name = "chan_drive"
crate-type = ["lib"]
