[package]
name = "chan-library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The chan library: the authoritative window/terminal/workspace lifecycle (the source of truth clients reconcile to)."

[lib]
name = "chan_library"

[features]
# Test-only registry helpers (`Registry::attach`/`len`/`is_empty`) compiled
# for downstream test builds. chan-server's tests drive the registry directly
# (host.rs, routes/terminal.rs), so they enable this in their dev-dependency;
# production builds never see these methods.
test-util = []

[dependencies]
# The filesystem/registry core. default-features off (no embeddings: the host
# owns lifecycle, not search — chan-server forwards embeddings through its own
# feature when it builds chan-workspace).
chan-workspace = { workspace = true, default-features = false }
# Control-socket wire types (`ControlRequest`/`ControlResponse`); default-features
# off drops the clap-backed `cs` client, same as chan-server.
chan-shell = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dirs = { workspace = true }
portable-pty = "0.8"
rand = "0.8"
rustix = { version = "1.1", features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
